tests/tests/errors/2014-14.vb
'#compiler-options:/recurse:??\
'#compiler-message:Command line error BC2014 : the value '??\' is invalid for option 'recurse'
'#exit-code:1